Latest changes to dotfiles

--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -1,5 +1,5 @@
 # make tmux display things in 256 colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "linux"
 
 # set scrollback history to 10000 (10k)
 set -g history-limit 10000
@@ -38,6 +38,21 @@ set-option -g display-panes-colour brightred #orange
 
 # clock
 set-window-option -g clock-mode-colour green #green
+
+# vim style copy and paste
+#setw -g mode-keys vi
+#unbind [
+#bind Escape copy-mode
+#unbind p
+#bind p paste-buffer
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection 
+
+# To copy:
+bind-key -T copy-mode y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+
+# To paste:
+bind-key C-y run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
