Enhancements to use vi keys in copy/paste mode. And to use xclip system clipboard by default.

--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -7,6 +7,11 @@ set -g history-limit 10000
 # Change to Screen's ctrl-a escape sequence and use screen-like keys
 source /usr/share/byobu/keybindings/tmux-screen-keys.conf
 
+# vim style copy paste in edit mode
+set-window-option -g mode-keys vi
+# enter in visual mode sends to xclip system clipboard
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -i -f -selection primary | xclip -i -selection clipboard'
+
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
@@ -38,21 +43,6 @@ set-option -g display-panes-colour brightred #orange
 
 # clock
 set-window-option -g clock-mode-colour green #green
-
-# vim style copy and paste
-#setw -g mode-keys vi
-#unbind [
-#bind Escape copy-mode
-#unbind p
-#bind p paste-buffer
-#bind-key -t vi-copy 'v' begin-selection
-#bind-key -t vi-copy 'y' copy-selection 
-
-# To copy:
-bind-key -T copy-mode y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
-
-# To paste:
-bind-key C-y run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
