Binding standard tmux paste to xclip -o

--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -11,6 +11,7 @@ source /usr/share/byobu/keybindings/tmux-screen-keys.conf
 set-window-option -g mode-keys vi
 # enter in visual mode sends to xclip system clipboard
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -i -f -selection primary | xclip -i -selection clipboard'
+bind ] run-shell "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
 
 #### COLOUR (Solarized dark)
 
