Adding paste from xclip. Removing dependency on byobu.

--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -5,7 +5,7 @@ set -g default-terminal "linux"
 set -g history-limit 10000
 
 # Change to Screen's ctrl-a escape sequence and use screen-like keys
-source /usr/share/byobu/keybindings/tmux-screen-keys.conf
+source ~/.local/share/tmux-screen-keys.conf
 
 # vim style copy paste in edit mode
 set-window-option -g mode-keys vi
