--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -1,6 +1,6 @@
 # make tmux display things in 256 colors
 set -g default-terminal "linux"
-
+new-session -n $HOST
 # set scrollback history to 10000 (10k)
 set -g history-limit 10000
 
