Adding tmux configurations suggested by neovim CheckHealth

--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -1,8 +1,11 @@
 # make tmux display things in 256 colors
-set -g default-terminal "linux"
+set -g default-terminal "tmux-256color"
 new-session -n $HOST
-# set scrollback history to 10000 (10k)
-set -g history-limit 10000
+
+# set scrollback history to 100000 (100k)
+set -g history-limit 100000
+
+set -sg escape-time 10
 
 # Change to Screen's ctrl-a escape sequence and use screen-like keys
 source ~/.local/share/tmux-screen-keys.conf
