--- a/common/.vim/init.toml
+++ b/common/.vim/init.toml
@@ -44,8 +44,6 @@ default_height = 30
 
 [[custom_plugins]]
 name = 'vim-syntastic/syntastic'
-merged = 0
-
-[[custom_plugins]]
 name = 'vim-scripts/dbext.vim'
+name = 'mogelbrod/vim-jsonpath'
 merged = 0
