Adding some settings that do not seemingly make a huge difference but I may modify in the future.

--- a/common/.mednafen/nes.cfg
+++ b/common/.mednafen/nes.cfg
@@ -5,7 +5,6 @@ filesys.path_palette VideoGames/Palettes
 filesys.path_fimrware VideoGames/Bios/Famicom
 
 nes.enable 1
-nes.ntscblitter 1
 nes.scanlines 0
 nes.shader goat
 nes.shader.goat.fprog 1
@@ -15,3 +14,10 @@ nes.shader.goat.slen 1
 nes.shader.goat.tp 0.50
 nes.shader.goat.vdiv 0.50
 nes.stretch aspect
+
+nes.ntscblitter 1
+nes.ntsc.contrast 0.05
+nes.ntsc.mergefields 1
+nes.ntsc.preset none
+nes.ntsc.saturation -0.1
+nes.ntsc.sharpness 0
