--- a/common/.local/share/tmux-screen-keys.conf
+++ b/common/.local/share/tmux-screen-keys.conf
@@ -14,8 +14,8 @@
 
 # Set the prefix to ^A.
 unbind C-b
-set -g prefix ^A
-bind a send-prefix
+set -g prefix ^F
+bind f send-prefix
 
 # Bind appropriate commands similar to screen.
 # lockscreen ^X x
@@ -50,11 +50,11 @@ bind n next-window
 
 # title A
 unbind A
-bind A command-prompt "rename-window %%"
+bind F command-prompt "rename-window %%"
 
 # other ^A
 unbind ^A
-bind ^A last-window
+bind ^F last-window
 
 # prev ^H ^P p ^?
 unbind ^H
