Setting xterm-256color

--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -1,5 +1,5 @@
 # make tmux display things in 256 colors
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
 new-session -n $HOST
 
 # set scrollback history to 100000 (100k)
