Tweaking status bar for more useful information including cpu and memory

--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -52,9 +52,9 @@ set-window-option -g clock-mode-colour green #green
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
 set -g status-left-length 70
-    set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+    set -g status-left "#[fg=green]: #h : #[fg=blue]#(free -m | head -n2 | tail -n1 | awk '{print $3}')MB : #[fg=green]#(ps -A -o pcpu | tail -n+2 | paste -sd+ | bc)% : "
 
  # show session name, window & pane number, date and time on right side of
     # status bar
     set -g status-right-length 60
-    set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
+    set -g status-right "#[fg=blue] #(cat /tmp/notifications | wc -l) : #(curl -q https://wtfismyip.com/text) #[fg=yellow]:: #(date --iso-8601) #[fg=green]:: #(date -Ins | cut -d "T" -f2 | cut -d "," -f1) :: #(date -u | awk '{print $4}')::"
