Added battery percentage to status bar

--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -52,7 +52,7 @@ set-window-option -g clock-mode-colour green #green
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
 set -g status-left-length 70
-    set -g status-left "#[fg=green]: #h : #[fg=blue]#(free -m | head -n2 | tail -n1 | awk '{print $3}')MB : #[fg=green]#(ps -A -o pcpu | tail -n+2 | paste -sd+ | bc)% : "
+    set -g status-left "#[fg=green]: #h : #[fg=blue]#(free -m | head -n2 | tail -n1 | awk '{print $3}')MB : #[fg=green]#(ps -A -o pcpu | tail -n+2 | paste -sd+ | bc)% : #[fg=blue]#(cat /sys/class/power_supply/BAT0/capacity)% : "
 
  # show session name, window & pane number, date and time on right side of
     # status bar
