Use 24h format for all times

--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -57,4 +57,4 @@ set -g status-left-length 70
  # show session name, window & pane number, date and time on right side of
     # status bar
     set -g status-right-length 60
-    set -g status-right "#[fg=blue] #(cat /tmp/notifications | wc -l) : #(curl -q https://wtfismyip.com/text) #[fg=yellow]:: #(date --iso-8601) #[fg=green]:: #(date -Ins | cut -d "T" -f2 | cut -d "," -f1) :: #(date -u | awk '{print $4}')::"
+    set -g status-right "#[fg=blue] #(cat /tmp/notifications | wc -l) : #(curl -q https://wtfismyip.com/text) #[fg=yellow]:: #(date --iso-8601) #[fg=green]:: #(date -Ins | cut -d "T" -f2 | cut -d "," -f1) :: #(date -uIns | cut -d "T" -f2 | cut -d "," -f1)::"
